@@ -2,14 +2,17 @@ package com.fisa.bank.domains.common.config.security.resource;
 
 import lombok.RequiredArgsConstructor;
 
-import java.util.Collections;
+import java.util.Collection;
+import java.util.List;
 
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.User;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
 
 import com.fisa.bank.domains.user.persistence.entity.UserAuth;
+import com.fisa.bank.domains.user.persistence.enums.UserRole;
 import com.fisa.bank.domains.user.persistence.repository.UserAuthRepository;
 
 @RequiredArgsConstructor
@@ -28,6 +31,18 @@ public class CustomUserDetailsService implements UserDetailsService {
                     new UsernameNotFoundException(
                         String.format("Username not found : %s", username)));
 
-    return new User(username, userAuth.getPassword(), Collections.emptyList());
+    Collection<SimpleGrantedAuthority> authorities = mapAuthorities(userAuth.getRole());
+
+    return new User(username, userAuth.getPassword(), authorities);
+  }
+
+  private Collection<SimpleGrantedAuthority> mapAuthorities(UserRole role) {
+    if (role == null) {
+      return List.of();
+    }
+    return switch (role) {
+      case ADMIN -> List.of(new SimpleGrantedAuthority("ROLE_ADMIN"), new SimpleGrantedAuthority("ROLE_USER"));
+      case USER -> List.of(new SimpleGrantedAuthority("ROLE_USER"));
+    };
   }
 }
